Fix extra space

--- a/assets/css/components/section.css
+++ b/assets/css/components/section.css
@@ -25,6 +25,7 @@
   flex-direction: column;
   justify-content: center;
   border-radius: 0 0 3px 3px;
+  margin-top: -6px;
 }
 
 .location-card div p {
